See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.64.00

              pngtopam: fix bug: ignores -gamma.  Introduced in 10.48
              (September 2009).

13.06.29 BJH  Release 10.63.00

              Add pamtowinicon, winicontopam.  Thanks Ludolf Holzheid
              (lholzheid@bihl-wiedemann.de).

              pgmnoise: add -maxval, speed up.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              Perl programs: make them shell programs that reinvoke themselves
              as perl so we can get the Perl interpreter from the PATH.

              yuvtoppm: check for inconsistencies between specified
              width and height and size of input.

              411toppm: check for inconsistencies between specified
              width and height and size of input.

              Ignore -plain when program generates PAM.  Before, programs
              failed if the user specified -plain to a program that generates
              a PAM image.

              giftopnm: fix bug: erroneously claims GIF ends prematurely.
              Broken in Netpbm 10.38 (March 2007).  This affects all GIFs, but
              the problem does not manifest when Netpbm was built with Gcc
              from 2007 and later.

              pnmtops: Fix bug: only first image gets converted.  Broken in
              Netpbm 10.56 (September 2011).

              pnmtopng: fix bug: incorrect output when output should have
              an alpha mask.  Broken in Netpbm 10.55 (June 2011).  Thanks
              Ludolf Holzheid (lholzheid@bihl-wiedemann.de).

              pnmtopng: fix bug: output bigger than it needs to be when the
              input is a color format image that contains only gray.  Broken
              since at least Netpbm 10.26 (May 2001), but after 10.18
              (September 2003).  Thanks Ludolf Holzheid
              (lholzheid@bihl-wiedemann.de).
