@@ -9,6 +9,9 @@ not yet  BJH  Release 10.64.00
               pngtopam: fix bug: ignores -gamma.  Introduced in 10.48
               (September 2009).
 
+              libnetpbm, pnmpsnr, ppmcie on Mac OS X: fix bogus printing of
+              floating point numbers.
+
 13.06.29 BJH  Release 10.63.00
 
               Add pamtowinicon, winicontopam.  Thanks Ludolf Holzheid
